# LS-Addon-Windowed-Mode

./: .gitignore  README.md  build.bat
LS_Windowed/: CMakeLists.txt  dxgi_proxy.hpp  logger.cpp  logger.hpp  main.cpp
addons/LS_Windowed/: dxgi_proxy.cpp
